[gd_scene load_steps=27 format=3 uid="uid://cb5c5tcycst1v"]

[ext_resource type="Script" path="res://src/scenes/init/MenuScene.gd" id="1_75ovp"]
[ext_resource type="Script" path="res://src/components/spawners/MenuSpawner.gd" id="1_83tbr"]
[ext_resource type="Shader" path="res://src/shaders/MenuSceneSky.gdshader" id="2_72pw2"]
[ext_resource type="Script" path="res://src/components/sky/SkyIcosahedron.gd" id="4_p8iyg"]
[ext_resource type="Script" path="res://src/components/controls/MenuControls.gd" id="4_rh2oc"]
[ext_resource type="Script" path="res://src/components/gui/menu/MenuSelector.gd" id="5_idm6q"]
[ext_resource type="Theme" uid="uid://b2gmnph0w6d1k" path="res://src/themes/Base.theme" id="7_vbk8k"]
[ext_resource type="Script" path="res://src/components/gui/ControlButton.gd" id="8_0medo"]
[ext_resource type="Script" path="res://src/components/gui/MenuGui.gd" id="8_rgs6i"]
[ext_resource type="PackedScene" uid="uid://derbnrboktp1g" path="res://src/components/gui/DebugStatsContainer.tscn" id="8_w8wvy"]
[ext_resource type="PackedScene" uid="uid://b00khg3mstn6t" path="res://src/components/gui/fps_label.tscn" id="10_djqxo"]
[ext_resource type="Script" path="res://src/components/settings/Config.gd" id="12_qaxtt"]
[ext_resource type="Script" path="res://src/components/gui/menu/MenuState.gd" id="13_416wy"]
[ext_resource type="Script" path="res://src/components/controls/CommonControls.gd" id="13_cfv8o"]
[ext_resource type="Script" path="res://src/components/gui/menu/MenuActions.gd" id="14_ywwly"]
[ext_resource type="ArrayMesh" uid="uid://dh3qpoqqgdct5" path="res://src/models/icosahedron/assets/icosahedron_Solid.res" id="15_4x34a"]
[ext_resource type="Shader" path="res://src/shaders/MenuSceneSky_v2.gdshader" id="15_isf56"]
[ext_resource type="ArrayMesh" uid="uid://o7rlauuvnfp6" path="res://assets/build/skybox/icosahedron_Solid_Sky.res" id="16_ef36i"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_3hc0b"]
render_priority = 0
shader = ExtResource("15_isf56")
shader_parameter/bg_color = Color(0.729, 0.902, 0.992, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_4go8s"]
shader = ExtResource("2_72pw2")
shader_parameter/bg_color = Vector3(0.729, 0.902, 0.992)

[sub_resource type="Sky" id="Sky_v8mvj"]
sky_material = SubResource("ShaderMaterial_4go8s")

[sub_resource type="Environment" id="Environment_dki5q"]
background_mode = 2
sky = SubResource("Sky_v8mvj")
tonemap_exposure = 0.95

[sub_resource type="ShaderMaterial" id="ShaderMaterial_uppoo"]

[sub_resource type="QuadMesh" id="QuadMesh_jl0os"]
size = Vector2(2, 2)

[sub_resource type="BoxShape3D" id="BoxShape3D_51eil"]

[sub_resource type="GDScript" id="GDScript_ptf72"]
script/source = "extends PanelContainer
class_name GamePanelContainer

# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta: float) -> void:
    pass
"

[node name="MenuScene" type="Node3D"]
script = ExtResource("1_75ovp")

[node name="Environment" type="Node3D" parent="."]

[node name="SkyMeshIcosahedron" type="MeshInstance3D" parent="Environment"]
transform = Transform3D(-1.12596, -1.83421, -0.718005, -1.68823, 1.32493, -0.736003, 1.01416, 0.168981, -2.02215, 0, 0, 0)
material_override = SubResource("ShaderMaterial_3hc0b")
mesh = ExtResource("16_ef36i")
skeleton = NodePath("../..")
script = ExtResource("4_p8iyg")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="Environment"]
transform = Transform3D(-0.238764, 0.626019, -0.742356, -0.554774, 0.539494, 0.633381, 0.797005, 0.563068, 0.218487, 0.155482, 0.644891, 0.176892)
directional_shadow_mode = 0
sky_mode = 1

[node name="WorldEnvironment" type="WorldEnvironment" parent="Environment"]
environment = SubResource("Environment_dki5q")

[node name="Camera3D" type="Camera3D" parent="Environment"]
transform = Transform3D(1, 0, 0, 0, 0.966957, 0.25494, 0, -0.25494, 0.966957, 0, 0.626921, 1.89439)

[node name="PostProcessingQuad" type="MeshInstance3D" parent="Environment/Camera3D"]
transform = Transform3D(1, 0, 0, 0, 0.998777, 0.049442, 0, -0.049442, 0.998777, 0, 0.0635505, -0.720649)
visible = false
material_override = SubResource("ShaderMaterial_uppoo")
mesh = SubResource("QuadMesh_jl0os")
skeleton = NodePath("../../..")

[node name="MenuSpawner" type="Marker3D" parent="."]
script = ExtResource("1_83tbr")

[node name="Anchor" type="Marker3D" parent="MenuSpawner"]
unique_name_in_owner = true

[node name="MenuControls" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
script = ExtResource("4_rh2oc")

[node name="MenuSelector" type="Area3D" parent="."]
unique_name_in_owner = true
script = ExtResource("5_idm6q")

[node name="CollisionShape3D" type="CollisionShape3D" parent="MenuSelector"]
transform = Transform3D(1, 0, 0, 0, 0.9282, 0.372081, 0, -0.372081, 0.9282, 0, 0.788826, 1.42193)
shape = SubResource("BoxShape3D_51eil")

[node name="Gui" type="CanvasLayer" parent="."]
script = ExtResource("8_rgs6i")

[node name="DebugStatsContainer" parent="Gui" instance=ExtResource("8_w8wvy")]
unique_name_in_owner = true

[node name="ControlsContainer" type="PanelContainer" parent="Gui"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("7_vbk8k")
script = SubResource("GDScript_ptf72")

[node name="LeftGameButton" type="Button" parent="Gui/ControlsContainer"]
custom_minimum_size = Vector2(437.78, 0)
layout_mode = 2
size_flags_horizontal = 0
script = ExtResource("8_0medo")
action = 2

[node name="RightGameButton" type="Button" parent="Gui/ControlsContainer"]
custom_minimum_size = Vector2(437.39, 151.48)
layout_mode = 2
size_flags_horizontal = 8
theme = ExtResource("7_vbk8k")
theme_type_variation = &"FlatButton"
script = ExtResource("8_0medo")
action = 3

[node name="UpGameButton" type="Button" parent="Gui/ControlsContainer"]
custom_minimum_size = Vector2(966.735, 341.23)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
script = ExtResource("8_0medo")
action = 4

[node name="BotGameButton" type="Button" parent="Gui/ControlsContainer"]
custom_minimum_size = Vector2(1011.59, 290.225)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
script = ExtResource("8_0medo")
action = 5

[node name="CenterGameButton" type="Button" parent="Gui/ControlsContainer"]
custom_minimum_size = Vector2(1011.59, 290.225)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("8_0medo")
action = 1

[node name="FPSLabel" parent="Gui" instance=ExtResource("10_djqxo")]

[node name="CommonControls" type="Control" parent="Gui"]
unique_name_in_owner = true
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("13_cfv8o")

[node name="Config" type="Node" parent="."]
script = ExtResource("12_qaxtt")
config_name = 1

[node name="MenuState" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("13_416wy")

[node name="MenuActions" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("14_ywwly")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(0.622057, 0, 0.664187, 0, 0.91, 0, -0.664187, 0, 0.622057, 0, 0, 0)
visible = false
mesh = ExtResource("15_4x34a")
skeleton = NodePath("../MenuSpawner")

[node name="CSGBox3D" type="CSGBox3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.526165, 0.462514, 0.982888)
visible = false
